# baseline

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml  railway.json
landing/: index.html  make_qr.py  netlify.toml
src/baseline/: cli.py  config.py  util.py
src/baseline/analytics/: activity.py  baseline_engine.py  nutrition.py
src/baseline/api/: app.py  oauth.py  schemas.py  webhooks.py
src/baseline/channels/: base.py  local.py  twilio_whatsapp.py
src/baseline/coach/: coach.py  evidence_kb.py  llm.py  prompt.py  retriever.py
src/baseline/conversation/: manager.py
src/baseline/domain/: models.py
src/baseline/evals/: golden_cases.json  harness.py  scorers.py
src/baseline/ingestion/: pipeline.py
src/baseline/nutrition/: estimator.py
src/baseline/onboarding/: conversation.py  flow.py
src/baseline/services/: insights.py
src/baseline/sources/: base.py  google.py  oauth.py  synthetic.py
src/baseline/storage/: db.py  repository.py  schema.py
src/baseline/triage/: engine.py  rules.py
tests/: test_activity_engine.py  test_api.py  test_api_v2.py  test_baseline_engine.py  test_channel.py  test_coach.py  test_coach_nutrition_activity.py  test_connect_link.py  test_conversation.py  test_domain_models.py  test_e2e.py  test_evals.py  test_ingestion.py  test_insights_service.py  test_layman_flows.py  test_nutrition_engine.py  test_nutrition_estimator.py  test_oauth.py  test_onboarding.py  test_onboarding_fsm.py  test_optin.py  test_prompt.py  test_retriever.py  test_router.py  test_scheduler.py  test_sources.py  test_storage.py  test_triage.py  test_v2_models.py  test_v2_storage.py
