[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baseline"
version = "0.1.0"
description = "Baseline Chat — a conversational, prevention-first AI health coach grounded in your own wearable data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "anthropic>=0.40",
    "twilio>=9.0",
    "qrcode[pil]>=7.4",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "anyio>=4.0",
    "pytest-anyio>=0.0.0",
]

[project.scripts]
baseline = "baseline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
